# evrp-rl

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  IMPLEMENTATION_COMPLETE.md  MANIFEST.in  NOTEBOOK_IMPLEMENTATION_GUIDE.md  ORANGE_CURVE_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  train.py
configs/: a2c_config.yaml  agents_examples.yaml  experiment_config.yaml  sac_config.yaml
docs/: ARCHITECTURE_DIAGRAM.md  BEFORE_AFTER_COMPARISON.md  CONFIG_REFERENCE.md  CRITICAL_BUG_FIX_v3.md  DEGRADATION_FIX.md  EARLY_STOPPING_GUIDE.md  EARLY_STOPPING_IMPLEMENTATION.md  ENCODERS.md  ENCODER_IMPLEMENTATION_SUMMARY.md  ENV_README.md  FRAMEWORK_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX_ORANGE_CURVES.md  NAN_GRADIENT_FIX.md  ORANGE_CURVE_IMPLEMENTATION.md  ORANGE_CURVE_QUICK_REF.md  REWARD_SHAPING_FIX.md  RL_IMPROVEMENTS.md  SMOOTH_CURVES_GUIDE.md  TRAINING_ANALYSIS_FIX_v2.md  TRAINING_FIXES_SUMMARY.md  TRAINING_STABILITY_FIXES.md  XAI.md  architecture_diagram.mmd
examples/: ablation_study.ipynb  agent_benchmark_evrp_a2c_sac.ipynb  case_study.ipynb  case_study_executed.ipynb  example_encoders.py  example_evrp.py  train_a2c.py  train_optimized.py  train_sac.py
examples/configs/: benchmark_a2c.yaml  benchmark_sac.yaml  config-dimeth.yml  config.yml  env_config.yml
scripts/: train_full.py  verify_config_application.py
src/agents/: __init__.py  a2c_agent.py  agent_factory.py  base_agent.py  sac_agent.py
src/encoders/: mlp_encoder.py
src/env/: __init__.py  evrp_env.py  wrappers.py
src/evrp_rl/: __init__.py  cli.py
src/framework/: __init__.py  core.py  normalizers.py  runner.py  training_utils.py
tests/: debug_test.py  example_evrp.py  test_agent_factory.py  test_agents_quick.py  test_encoders.py  test_evrp_env.py  test_evrp_fast.py  test_framework.py  test_training_success.py  test_xai.py  test_xai_cli.py  validate_stability_fixes.py  verify_env.py
tools/: run_notebook.py  run_variants.py  xai_run.py
(+13 files in other folders)
