[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evrp-rl"
version = "0.1.0"
description = "Deep Reinforcement Learning for the Electric Vehicle Routing Problem"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
authors = [
    { name = "EVRP-RL Contributors" },
]
keywords = ["reinforcement-learning", "vehicle-routing", "electric-vehicles", "graph-neural-networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "gymnasium>=0.29",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
gat = [
    "torch-geometric>=2.3",
]
xai = [
    "networkx>=3.0",
    "matplotlib>=3.7",
]
notebooks = [
    "jupyter>=1.0",
    "wandb>=0.15",
    "pandas>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "evrp-rl[gat,xai,notebooks,dev]",
]

[project.scripts]
evrp-train  = "evrp_rl.cli:train"
evrp-eval   = "evrp_rl.cli:evaluate"
evrp-config = "evrp_rl.cli:generate_config"
evrp-xai    = "evrp_rl.cli:xai"

[project.urls]
Repository = "https://github.com/jnlandu/evrp-rl"
"Bug Tracker" = "https://github.com/jnlandu/evrp-rl/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"evrp_rl" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
